add links and style

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stephanie Rice</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
@@ -13,37 +14,57 @@
       <h1>Stephanie Rice Portfolio</h1>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Resources</a></li>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact-me">Contact Me</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <section>
-        <article>
+          <img src="./assets/Images/purpleheader.jpg" alt="Website Purple Header"
+          style="float:center;width:100%;height:300px;">
+      </section>
+      <section id="about-me">
           <h2>About Me</h2>
-          <div>
+          <img src="./assets/Images/SMR.jpg" alt="Stephanie Rice Profile"
+          style="float:left;width:100px;height:100px;">
             <p>
-                Info about me.
-            </p>
-           </div>
-        </article>
-        <article>
+                Stephanie Rice is currently a team leader in customer service and e-commerce, with experience training and managing teams. Her previous background in marketing, brand strategy and account management have created a unique background for a creative approach. Stephanie is fueled by her passion for understanding the creative edge. She considers herself eager to build on her academic foundations in marketing and web development to stay in tune with the latest digital strategies through continued coursework and professional development. Her hunger for knowledge and determination to turn information into action has contributed to her recent success in launching an e-commerce team for delivery with Amazon. She continues to improve the productivity of her team by implementing strategic management methods to become one of the highest performing teams in her region. Stephanie believes that mindfulness in the workplace is the key to success and she lives this out through her interest in hiking, travel, meditation and gardening.
+             </p>
+      </section>
+      <section id="work">    
           <h2>Work</h2>
-          <div>
-            <p>
-              Work goes here.
-            </p>
-          </div>
-        </article>
+          <ul>
+            <li>
+              <a href="https://minnie1883.github.io/01_a11y/">
+              <img src="./assets/Images/portfolio1.jpg" alt="Project 1 Image" width="300" height="200">
+            </li>
+            <li>
+              <a href="https://minnie1883.github.io/sriceportfolio/">
+              <img src="./assets/Images/portfolio2.jpg" alt="Project 2 Image" width="300" height="200">
+            </li>
+            <li>
+              <a href="https://minnie1883.github.io/sriceportfolio/">
+              <img src="./assets/Images/portfolio3.jpg" alt="Project 3 Image" width="300" height="200">
+            </li>
+            <li>
+              <a href="https://minnie1883.github.io/sriceportfolio/">
+              <img src="./assets/Images/Portfolio4.jpg" alt="Project 4 Image" width="300" height="200">
+            </li>
+          </ul>
+      </section>
+      <section id="contact-me">
+          <h2>Contact Me</h2>
+           <p>
+              Email: swright9616@yahoo.com
+           </p>
       </section>
     </main>
 
     <footer>
-      <span>Thanks for visiting!</span>
+      <span>Thanks for visiting! 2021 &copy;</span>
     </footer>
   </body>
 </html>
