--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <section id="about-me">
           <h2>About Me</h2>
           <img src="./assets/Images/SMR.jpg" alt="Stephanie Rice Profile"
-          style="float:left;width:100px;height:100px;">
+          style="float:left;width:100px;height:100px;margin:10px;">
             <p>
                 Stephanie Rice is currently a team leader in customer service and e-commerce, with experience training and managing teams. Her previous background in marketing, brand strategy and account management have created a unique background for a creative approach. Stephanie is fueled by her passion for understanding the creative edge. She considers herself eager to build on her academic foundations in marketing and web development to stay in tune with the latest digital strategies through continued coursework and professional development. Her hunger for knowledge and determination to turn information into action has contributed to her recent success in launching an e-commerce team for delivery with Amazon. She continues to improve the productivity of her team by implementing strategic management methods to become one of the highest performing teams in her region. Stephanie believes that mindfulness in the workplace is the key to success and she lives this out through her interest in hiking, travel, meditation and gardening.
              </p>
       </section>
       <section id="work">    
           <h2>Work</h2>
-          <ul>
-            <li>
+           <ul>
+              <li>
               <a href="https://minnie1883.github.io/01_a11y/">
               <img src="./assets/Images/portfolio1.jpg" alt="Project 1 Image" width="300" height="200">
             </li>
