--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header>
-      <h1>Stephanie Rice Portfolio</h1>
+      
       <nav>
         <ul>
           <li><a href="#about-me">About Me</a></li>
@@ -26,6 +26,9 @@
           <img src="./assets/Images/purpleheader.jpg" alt="Website Purple Header"
           style="float:center;width:100%;height:300px;">
       </section>
+      <section>
+        <h1>Stephanie Rice Portfolio</h1>
+      </section>
       <section id="about-me">
           <h2>About Me</h2>
           <img src="./assets/Images/SMR.jpg" alt="Stephanie Rice Profile"
@@ -36,7 +39,7 @@
       </section>
       <section id="work">    
           <h2>Work</h2>
-           <ul>
+          <ul>
               <li>
               <a href="https://minnie1883.github.io/01_a11y/">
               <img src="./assets/Images/portfolio1.jpg" alt="Project 1 Image" width="300" height="200">
@@ -52,6 +55,10 @@
             <li>
               <a href="https://minnie1883.github.io/sriceportfolio/">
               <img src="./assets/Images/Portfolio4.jpg" alt="Project 4 Image" width="300" height="200">
+            </li>
+            <li>
+              <a href="https://minnie1883.github.io/sriceportfolio/">
+              <img src="./assets/Images/Portfolio5.jpg" alt="Project 5 Image" width="300" height="200">
             </li>
           </ul>
       </section>
