--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       <div class="work">
           <h4>Work</h4>
            <div class="container">
-              <a href="https://minnie1883.github.io/sriceportfolio/">
+              <a href="https://gannacon.github.io/Project_1/">
               <img src="assets/Images/port1.jpg" alt="Project 1 Image">
-              <a href="https://minnie1883.github.io/sriceportfolio/">
+              <a href="https://minnie1883.github.io/01_a11y/">
               <img src="assets/Images/port2.jpg" alt="Project 2 Image">
-              <a href="https://minnie1883.github.io/sriceportfolio/">
+              <a href="https://minnie1883.github.io/apicodequiz/">
               <img src="assets/Images/port3.jpg" alt="Project 3 Image"></div>
               </div>
             </div>
