--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
             </p>
       </div>
       <div class="second">
-        <img src="assets/Images/phone2.jpg" alt="Contact Me">
+        <a href="https://github.com/minnie1883">Github Link</a>
+      </div>
+      <div class="secondb">
+        <a href="https://minnie1883.github.io/sriceportfolio/">Portfolio Link</a>
+      </div>
+      <div class="fifth">
+        <p>Click to open <a href="assets/Images/StephanieRiceResume.pdf">Resume</a>.</p>
       </div>
       <div class="third">
           <h2>Contact Me:</h2>
@@ -46,10 +52,7 @@
         <a href="https://www.linkedin.com/in/stephanie-rice-13509589">
         <img src="assets/Images/Linked.jpg" alt="LinkedIn Logo"></a>
       </div>
-      <div class="fifth">
-        <h3>Stephanie Rice Resume</h3>
-        <p>Click to open <a href="assets/Images/StephanieRiceResume.pdf">resume</a>.</p>
-      </div>
+
       <div class="work">
           <h4>Work</h4>
            <div class="container">
