--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
       </div>
 
       <div class="work">
-          <h4>Work</h4>
            <div class="container">
+             <p>Work</p>
               <a href="https://gannacon.github.io/Project_1/">
-              <img src="assets/Images/port1.jpg" alt="Project 1 Image">
+              <img src="assets/Images/port1.jpg" alt="Project 1 Image"></a>
               <a href="https://minnie1883.github.io/01_a11y/">
-              <img src="assets/Images/port2.jpg" alt="Project 2 Image">
+              <img src="assets/Images/port2.jpg" alt="Project 2 Image"></a>
               <a href="https://minnie1883.github.io/apicodequiz/">
-              <img src="assets/Images/port3.jpg" alt="Project 3 Image"></div>
+              <img src="assets/Images/port3.jpg" alt="Project 3 Image"></a></div>
               </div>
             </div>
     </main>
