--- a/index.html
+++ b/index.html
@@ -53,15 +53,22 @@
         <img src="assets/Images/Linked.jpg" alt="LinkedIn Logo"></a>
       </div>
 
-      <div class="work">
-           <div class="container">
+      <div class="flex-container">
              <p>Work</p>
-              <a href="https://gannacon.github.io/Project_1/">
-              <img src="assets/Images/port1.jpg" alt="Project 1 Image"></a>
-              <a href="https://minnie1883.github.io/01_a11y/">
-              <img src="assets/Images/port2.jpg" alt="Project 2 Image"></a>
-              <a href="https://minnie1883.github.io/apicodequiz/">
-              <img src="assets/Images/port3.jpg" alt="Project 3 Image"></a></div>
+              <a><img src="assets/Images/Proj1.JPG" alt="Project 1 Image"></a>
+              <a>Project 1</a>
+              <a class="work" href="https://gannacon.github.io/Project_1/">Click Here for Deployed Site</a>
+              <a href="https://github.com/gannacon/Project_1">Click Here for Github Link</a>
+              <a>~</a>
+              <a><img src="assets/Images/Homework1.JPG" alt="Project 2 Image"></a>
+              <a>Homework 1</a>
+              <a href="https://minnie1883.github.io/01_a11y">Click Here for Deployed Site</a>
+              <a href="https://github.com/minnie1883/01_a11y">Click Here for Github Link</a>
+              <a>~</a>
+              <a><img src="assets/Images/Quiz.JPG" alt="Project 3 Image"></a>
+              <a>Coding Quiz</a>
+              <a href="https://minnie1883.github.io/apicodequiz/">Click Here for Deployed Site</a>
+              <a href="https://github.com/minnie1883/apicodequiz">Click Here for Github Link</a>
               </div>
             </div>
     </main>
